<resources>
    <string name="ApplicationName">Doom idgames Archive</string>
    <string name="MenuMain_Settings">Settings</string>
    <string name="MenuMain_About">About</string>
    <string name="MenuDetails_Download">Download</string>
    <string name="MenuDetails_ViewText">Text</string>
    <string name="Describe_Progress">Progress indicator</string>
    <string name="MainActivity_Title">Doom idgames Archive</string>
    <string name="IdgamesList_PathDefault"> / </string>
    <string name="IdgamesListItem_TitleDefault">Title</string>
    <string name="IdgamesListItem_SubTitleDefault">Subtitle</string>
    <string name="IdgamesListItem_DateDefault">17 may, 1987</string>
    <string name="IdgamesListHeader_TitleDefault">List Header Title</string>
    <string name="IdgamesDetails_TitleDefault">Title</string>
    <string name="IdgamesListText_TextDefault">Lorem ipsum.</string>
    <string name="IdgamesDetails_RatingVotesDefault">12 votes</string>
    <string name="IdgamesText_TextDefault">Textfile contents.</string>
    <string name="DownloadMirrors">The /idgames download mirror to use when downloading files</string>
    <string name="DownloadMirrorsTitle">Mirror</string>
    <string name="ListVoteLimitsTitle">New votes list size</string>
    <string name="ListNewLimitsTitle">New files list size</string>
    <string name="ListVoteLimits">The number of new votes to display</string>
    <string name="ListNewLimits">The number of new files to display</string>
    <string name="About_TextDefault">By Dennis \'Exl\' Meuwissen\n\nThis app makes use of the Doomworld /idgames API.\n\nDoom is © Bethesda Softworks LLC and Id Software.\n\nSpecial thanks to Linguica, Bloodshedder and Matt Tropiano.</string>
    <string name="Tabs_NewFiles">New</string>
    <string name="Tabs_LatestVotes">Votes</string>
    <string name="Tabs_Browse">Browse</string>
    <string name="Tabs_Search">Search</string>
    <string name="SearchHint">Search</string>
    <string name="Shadow">Shadow</string>
    <string name="IdgamesList_MessageDefault">Message</string>
    <string name="Caco">Dead Cacodemon</string>
    <string name="IdgamesDetails_NoVotes">No votes yet</string>
    <string name="IdgamesDetails_SingleVote">1 vote</string>
    <string name="IdgamesDetails_PluralVotes">%1$d votes</string>
    <string name="IdgamesDetails_InvalidTitle">Invalid file</string>
    <string name="IdgamesList_Directory">Directory</string>
    <string name="IdgamesDetails_ToastNoDirectory">External storage directory could not be found or created.</string>
    <string name="IdgamesDetails_ToastNoDownloadManager">Could not create download manager.</string>
    <string name="IdgamesDetails_ToastNoDownloadEnqueue">Could not queue download.</string>
    <string name="IdgamesDetails_ToastDownloadStarted">Download has started.</string>
</resources>