<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/PaddingSmall"
    android:paddingLeft="@dimen/PaddingMedium"
    android:paddingRight="@dimen/PaddingMedium"
    android:paddingTop="@dimen/PaddingSmall" >

    <LinearLayout
        android:id="@+id/IdgamesListItem_TypeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/IdGamesListItem_Icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="@dimen/PaddingMedium"
            custom:srcCompat="@drawable/ic_folder_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/PaddingSmall"
        android:layout_toStartOf="@+id/IdgamesListItem_Date"
        android:layout_toEndOf="@id/IdgamesListItem_TypeLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/IdgamesListItem_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="none"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/IdgamesListItem_TitleDefault"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <TextView
            android:id="@+id/IdgamesListItem_Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="none"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/IdgamesListItem_SubTitleDefault"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
    </LinearLayout>

    <TextView
        android:id="@+id/IdgamesListItem_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/PaddingMedium"
        android:layout_toStartOf="@+id/IdgamesListItem_Rating"
        android:gravity="end"
        android:text="@string/IdgamesListItem_DateDefault"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:visibility="visible" />

    <nl.exl.doomidgamesarchive.RatingView
        android:id="@+id/IdgamesListItem_Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        custom:drawableEmpty="@drawable/rating_skull_empty"
        custom:drawableFull="@drawable/rating_skull_blue_full"
        custom:drawableHalf="@drawable/rating_skull_blue_half"
        custom:rating="2.5"
        custom:ratingMax="5"
        custom:ratingSpacing="1dp"
        custom:scale="0.55" />

</RelativeLayout>