<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/IdgamesDetails_TitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryVariant">

        <TextView
            android:id="@+id/IdgamesDetails_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/IdgamesDetails_Rating"
            android:ellipsize="none"
            android:gravity="top"
            android:padding="@dimen/Padding"
            android:text="@string/IdgamesDetails_TitleDefault"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/design_default_color_on_primary" />

        <nl.exl.doomidgamesarchive.RatingView
            android:id="@+id/IdgamesDetails_Rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="@dimen/Padding"
            android:layout_marginEnd="@dimen/Padding"
            custom:drawableEmpty="@drawable/rating_skull_empty"
            custom:drawableFull="@drawable/rating_skull_blue_full"
            custom:drawableHalf="@drawable/rating_skull_blue_half"
            custom:rating="2.5"
            custom:ratingMax="5"
            custom:ratingSpacing="2dp"
            custom:scale="0.5" />

        <TextView
            android:id="@+id/IdgamesDetails_VoteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/IdgamesDetails_Rating"
            android:layout_alignEnd="@id/IdgamesDetails_Rating"
            android:paddingBottom="@dimen/Padding"
            android:text="@string/IdgamesDetails_RatingVotesDefault"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/design_default_color_on_primary" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/IdgamesDetails_Scroller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IdgamesDetails_TitleLayout" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/IdgamesDetails_Layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/PaddingMedium"
                android:paddingLeft="@dimen/Padding"
                android:paddingRight="@dimen/Padding" >
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/IdgamesDetails_Progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/Describe_Progress"
        android:visibility="gone" />

</RelativeLayout>